Fixed backwards notification num on mobile

--- a/dev/static/general/css/style.css
+++ b/dev/static/general/css/style.css
@@ -186,7 +186,8 @@ a:hover {
 
 .right-nav .dropdown-menu a,
 #help-mobile i,
-#notifications-mobile a {
+#notifications-mobile a,
+#numUnreadMobile {
     -moz-transform: scale(-1, 1);
     -webkit-transform: scale(-1, 1);
     -o-transform: scale(-1, 1);
